--- a/medias/style.css
+++ b/medias/style.css
@@ -1,7 +1,7 @@
 @media (max-width: 768px) {
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: 120px 60px auto auto 100px;
+        grid-template-rows: 100px 60px auto auto 180px;
     }
 
     #topo {
@@ -11,11 +11,19 @@
     #menu {
         grid-area: 2 / 1 / 3 / 2;
     }
+    #menu a {
+        margin: 0px ;
+    }
 
     #principal {
         grid-area: 3 / 1 / 4 / 2;
         flex-wrap: wrap;
         justify-content: center;
+    }
+
+    #listagem  {
+        height: 100%;
+        width: 100%;
     }
 
     #secundario {
@@ -25,6 +33,7 @@
         justify-content: center;
         align-items: center;
         overflow-x: auto;
+        display: none;
     }
 
     .secund {
@@ -35,5 +44,7 @@
 
     #rodape {
         grid-area: 5 / 1 / 6 / 2;
+        text-align: center;
+        font-size: 14px;
     }
 }
