--- a/estilo/style.css
+++ b/estilo/style.css
@@ -51,21 +51,42 @@
     transition: width 0.7s ease, height 0.7s ease;
 }
 
+
 .menu {
     display: flex;
     gap: 48px;
     width: 100%;
+    text-align: center;
     justify-content: center;
+}
+#genero {
+    border: none;
+    background-color: rgb(0, 0, 0);
+    color: #ff8c00;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 12px;
+    width: 120px;
+
+    transition: width 0.7s ease, height 0.7s ease;
+}
+#genero:hover {
+    background-color: #ff8c00;
+    color: rgb(0, 0, 0);
 }
 .menu a {
     background-color: rgb(0, 0, 0);
     text-decoration: none;
-    color: #ff8c00;;
+    text-align: center;
+    color: #ff8c00;
     padding: 10px;
-    margin: 0px 20px;
+    width: 120px;
     border-radius: 12px;
     display: flex;
     align-items: center;
+    justify-content: center;
 
     transition: width 0.7s ease, height 0.7s ease;
 }
@@ -91,13 +112,13 @@
 }
 
 #principal h1 {
-    color: #ff8c00;
+    color: #000000;
 }
 
 #listagem { 
     height: 95%;
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.137);
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -172,11 +193,20 @@
 }
 
 #rodape {
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.178);
     color:#ff8c00;
     flex-direction: column;
     grid-area: 4 / 1 / 5 / -1;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+#rodape h2 {
+    margin-top: 10px;
+    font-size: 34px;
+}
+
+#rodape p {
+    margin-top: 10px;
+    font-size: 18px;
 }
