--- a/medias/style.css
+++ b/medias/style.css
@@ -1,7 +1,8 @@
-@media (max-width: 768px) {
+/* Telas menores – celulares */
+@media screen and (max-width: 768px) {
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: 100px 60px auto auto 180px;
+        grid-template-rows: 100px 120px auto auto 180px;
     }
 
     #topo {
@@ -11,35 +12,59 @@
     #menu {
         grid-area: 2 / 1 / 3 / 2;
     }
-    #menu a {
-        margin: 0px ;
+
+    .menu {
+        flex-direction: column;
+        gap: 10px;
     }
 
     #principal {
         grid-area: 3 / 1 / 4 / 2;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    #listagem  {
-        height: 100%;
+        display: flex;
         width: 100%;
-    }
-
-    #secundario {
-        grid-area: 4 / 1 / 5 / 2;
-        flex-direction: row;
+        height: 100%;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        overflow-x: auto;
+    }
+
+    #listagem {
+        width: 70%;
+        height: 95%;
+        background-color: rgba(0, 0, 0, 0.233);
+    }
+
+    #listagem h1 {
+        display: none;
+    }
+
+    .list {
+        width: 120px;
+        height: 130px;
+        margin: 20px 5px 5px 5px;
+        background-color: rgba(0, 0, 0, 0.767);
+    }
+
+    .poster {
+        display: none;
+    }
+
+    #secundario {
         display: none;
     }
 
     .secund {
-        min-width: 120px;
-        min-height: 120px;
-        width: auto;
+        grid-area: 4 / 1 / 5 / 2;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        display: none;
+    }
+    #secundario h1 {
+       display: none;
     }
 
     #rodape {
@@ -48,3 +73,4 @@
         font-size: 14px;
     }
 }
+
