--- a/estilo/style.css
+++ b/estilo/style.css
@@ -12,6 +12,7 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 
@@ -20,8 +21,8 @@ body, html {
     height: 100%;
     display: grid;
     grid-template-rows: 100px 50px 1fr 240px;
-    grid-template-columns: 1fr 300px;
-    gap: 10px;
+    grid-template-columns: 1fr 250px;
+    gap: 20px;
 
 }
 
@@ -33,6 +34,17 @@ body, html {
 
 }
 
+#topo div.menu {
+    height: 40px;
+    font-size: 18px;
+    display: flex;
+    margin-right: 10px;
+    align-content: flex-end;
+    justify-content: flex-end;
+    position: relative;
+    float: right;
+}
+
 #topo {
     background-color: rgb(0, 0, 0);
     grid-area: 1 / 1 / 2 / -1;
@@ -42,14 +54,6 @@ body, html {
     align-items: center;
     cursor: pointer;
 
-}
-
-#topo div.menu {
-    height: 40px;
-    font-size: 18px;
-    display: flex;
-    align-content: flex-end;
-    justify-content: flex-end;
 }
 
 
@@ -71,22 +75,22 @@ body, html {
     justify-content: center;
 }
 #genero {
+    text-decoration: none;
     border: none;
     background-color: rgb(0, 0, 0);
     color: #ff8c00;
     display: flex;
-    font-size: 22px;
+    font-size: 18px;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    border-radius: 12px;
-    width: 120px;
+    width: 80px;
     height: 40px;
 
 }
 #genero:hover {
-    background-color: #ff8c00;
-    color: rgb(0, 0, 0);
+    border-bottom: 2px solid #ff8c00;
+    color: #ff8c00;
 }
 .menu a {
     background-color: rgb(0, 0, 0);
@@ -94,8 +98,7 @@ body, html {
     text-align: center;
     color: #ff8c00;
     height: 40px;
-    width: 120px;
-    border-radius: 12px;
+    width: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -103,8 +106,8 @@ body, html {
 }
 
 .menu a:hover {
-    background-color: #ff8c00;
-    color: rgb(0, 0, 0);
+    border-bottom: 2px solid #ff8c00;
+    color: #ff8c00;
 
 }
 
@@ -114,8 +117,8 @@ body, html {
     display: flex;
     height: 100%;
     flex-wrap: wrap;
-    align-content: center;
-    align-items: flex-start;
+    align-content: flex-start;
+    align-items: center;
     justify-content: center;
     cursor: pointer;
     border-radius: 12px;
@@ -123,62 +126,42 @@ body, html {
     transition: transform 0.7s ease;
 }
 
-#principal h1 {
-    color: #000000;
-    font-size: 28px;
-    margin-bottom: 20px;
-}
-
-#principal h1:hover {
-    color: #ff8c00;
-    transform: scale(1.05);
-    transition: transform 0.7s ease;
-}
-
-#listagem { 
-    width: 80%;
-    height: 79%;
-    background-color: rgba(0, 0, 0, 0.568);
-    display: flex;
-    flex-wrap: wrap;
-    border-radius: 12px;
-    align-items: center;
-    align-content: flex-start;
-    justify-content: center;
-}
 
 .list {
-    background-color: rgba(0, 0, 0, 0.247);
+    background-color: rgb(168, 14, 14);
     display: flex;
-    margin: 20px 5px 5px 5px;
     color: #ff8c00;
     border-radius: 12px;
+    margin: 20px 5px 5px 5px;
     align-items: center;
-    align-content: flex-start;
     justify-content: center;
-    flex-grow: 0; /* torna o item flexível */
-    flex-shrink: 1;
-    height: 180px;
-    width: 120px;
+    height: 220px;
+    width: 140px;
 
 }
 
 .list:hover {
-    background-color: rgba(240, 248, 255, 0.452);
-    color: black;  
-
     transform: scale(1.05);
     transition: transform 0.5s ease;
 }
 
-.poster {
-    border: 2px dashed red;
-    width: 80%;
-    height: 250px;
-    margin-top: 40px;
-    border-radius: 12px;
-    background-color: #00000036;
+.list a {
+    text-decoration: none;
+    color: #ff8c00;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.list img {
+    width: 140px;
+    height: 100%;
+    border-radius: 12px;
+
+}
+
 
 #secundario {
     background-color: rgb(0, 0, 0);
@@ -195,7 +178,8 @@ body, html {
 
 #secundario h1 {
     color: #ff8c00;
-    font-size: 24px;
+    font-size: 18px;
+    flex-shrink: 1;
 }
 
 .secund {
@@ -242,7 +226,8 @@ body, html {
     flex-direction: column;
     grid-area: 4 / 1 / 5 / -1;
     display: flex;
-    align-items: start;
+    text-align: center;
+    align-items: center;
 }
 #rodape h2 {
     margin-top: 10px;
