--- a/medias/style.css
+++ b/medias/style.css
@@ -2,7 +2,7 @@
 @media screen and (max-width: 768px) {
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: 100px 120px auto auto 180px;
+        grid-template-rows: 100px 60px auto auto 180px;
     }
 
     #topo {
@@ -14,10 +14,17 @@
     }
 
     .menu {
-        flex-direction: column;
+        flex-direction: row;
         gap: 10px;
     }
+    #topo div.menu {
+        height: 40px;
+        font-size: 18px;
+        display: flex;
+        align-content: flex-end;
+        justify-content: flex-end;
 
+    }
     #principal {
         grid-area: 3 / 1 / 4 / 2;
         display: flex;
@@ -28,19 +35,65 @@
         align-items: center;
     }
 
-    #listagem {
-        width: 70%;
-        height: 95%;
-        background-color: rgba(0, 0, 0, 0.233);
+    .list {
+        width: 140px;
+        height: 160px;
+        display: flex;
+        flex-shrink: 1;
+        margin: 20px 5px 5px 5px;
+        background-color: rgba(160, 131, 131, 0.767);
     }
 
-    #listagem h1 {
+    .list img {
+    width: 140px;
+    height: 100%;
+    border-radius: 12px;
+
+}
+
+    .poster {
         display: none;
     }
 
+    #secundario {
+        display: none;
+    }
+   
+
+    #rodape {
+        grid-area: 5 / 1 / 6 / 2;
+        text-align: center;
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .container {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 100px 60px auto auto 180px;
+    }
+
+    #topo {
+        grid-area: 1 / 1 / 2 / 3;
+    }
+
+    #menu {
+        grid-area: 2 / 1 / 3 / 3;
+    }
+
+    #principal {
+        grid-area: 3 / 1 / 4 / 3;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+
     .list {
-        width: 120px;
-        height: 130px;
+        width: 100px;
+        height: 150px;
         margin: 20px 5px 5px 5px;
         background-color: rgba(0, 0, 0, 0.767);
     }
@@ -53,24 +106,14 @@
         display: none;
     }
 
-    .secund {
-        grid-area: 4 / 1 / 5 / 2;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        display: none;
-    }
-    #secundario h1 {
-       display: none;
-    }
-
     #rodape {
         grid-area: 5 / 1 / 6 / 2;
         text-align: center;
+        width: 100%;
         font-size: 14px;
     }
+
+
+    
 }
 
