--- a/medias/style.css
+++ b/medias/style.css
@@ -42,6 +42,7 @@
 
     .banner {
         height: 200px;
+        width: 85%;
     }
 
     .banner-content h1 {
@@ -80,17 +81,27 @@
 
     #rodape {
         grid-area: 5 / 1 / 6 / 2;
-        padding: 20px 10px;
+        padding: 15px 10px;
+        font-size: 0.8rem;
     }
 
     .footer-content {
         flex-direction: column;
-        gap: 20px;
+        gap: 15px;
     }
 
     .footer-section {
         width: 100%;
         text-align: center;
+        margin-bottom: 10px;
+    }
+    
+    .footer-section h3 {
+        font-size: 0.95rem;
+    }
+    
+    .footer-bottom {
+        font-size: 0.75rem;
     }
 }
 
@@ -108,6 +119,7 @@
 
     .banner {
         grid-area: 2 / 1 / 3 / 3;
+        width: 75%;
     }
 
     #principal {
@@ -133,12 +145,13 @@
 /* Desktops */
 @media screen and (min-width: 993px) {
     .container {
-        max-width: 1400px;
-        margin: 0 auto;
+        width: 100%;
+        margin: 0;
     }
 
     .banner {
         height: 350px;
+        width: 60%;
     }
 
     .list {
