--- a/estilo/medias.css
+++ b/estilo/medias.css
@@ -26,7 +26,7 @@
 
     .menu {
         flex-wrap: wrap;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         gap: 10px;
         margin: 10px 0;
