--- a/estilo/style.css
+++ b/estilo/style.css
@@ -34,7 +34,7 @@ body, html {
 
 /* Header Styles */
 #topo {
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: rgb(0, 0, 0);
     grid-area: 1 / 1 / 2 / -1;
     font-size: 14px;
     color: #ff8c00;
@@ -60,7 +60,7 @@ body, html {
 
 .menu {
     display: flex;
-    gap: 30px;
+    gap: 48px;
     max-width: 100%;
     text-align: center;
     align-content: center;
@@ -83,6 +83,15 @@ body, html {
 .menu a:hover {
     border-bottom: 2px solid #ff8c00;
     color: #ffffff;
+}
+
+.link{
+    text-decoration: none;
+    color: #ff8c00;
+    width: 80px;
+    font-size: 18px;
+    padding: 8px 12px;
+    text-align: left;
 }
 
 /* Search Bar */
@@ -119,6 +128,11 @@ body, html {
     background-color: #e67e00;
 }
 
+#login:hover {
+    border-bottom: 2px solid #ff8c00;
+    color: #ffffff;
+}
+
 /* Banner Section */
 .banner {
     grid-area: 2 / 1 / 3 / -1;
@@ -149,7 +163,7 @@ body, html {
 
 /* Main Content */
 #principal {
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: rgb(0, 0, 0);
     grid-area: 3 / 1 / 4 / 2;
     width: 100%;
     display: flex;
@@ -175,7 +189,7 @@ body, html {
 }
 
 .list {
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #000000;
     display: flex;
     flex-direction: column;
     color: #ff8c00;
@@ -190,7 +204,8 @@ body, html {
 }
 
 .list:hover {
-    transform: scale(1.05);
+    transform: translateY(7px);
+    background-color: #ecb776;
     box-shadow: 0 0 15px rgba(255, 140, 0, 0.5);
 }
 
@@ -223,7 +238,7 @@ body, html {
 
 /* Sidebar */
 #secundario {
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: rgb(0, 0, 0);
     grid-area: 3 / 2 / 4 / 3;
     max-height: 100%;
     max-width: 100%; 
@@ -260,7 +275,8 @@ body, html {
 }
 
 .secund:hover {
-    background-color: rgba(255, 140, 0, 0.2);
+    background-color: #ecb776;
+    box-shadow: 0 0 15px rgba(255, 140, 0, 0.5);
     transform: translateX(7px);
 }
 
