--- a/estilo/anime-details.css
+++ b/estilo/anime-details.css
@@ -7,6 +7,10 @@
     margin: 0 auto;
 }
 
+#topo {
+    background-color: #000;
+}
+
 .breadcrumb {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 10px 20px;
@@ -205,6 +209,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     padding: 15px;
     border-radius: 5px;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -212,7 +217,8 @@
 }
 
 .episode-item:hover {
-    background-color: rgba(255, 140, 0, 0.2);
+    background-color: #ff7b0071;
+    transform: translateX(7px);
 }
 
 .episode-number {
@@ -237,6 +243,40 @@
     color: #ccc;
     font-size: 0.9rem;
 }
+
+#episodios-anime {
+  margin-top: 30px;
+  padding: 20px;
+  background-color: #1e1e1e;
+  border-radius: 10px;
+}
+
+#episodios-anime h3 {
+  color: #ff0048;
+  margin-bottom: 10px;
+  font-size: 22px;
+}
+
+#lista-episodios li {
+  margin-bottom: 10px;
+}
+
+#lista-episodios a {
+  color: #fff;
+  text-decoration: none;
+  background: #2a2a2a;
+  padding: 10px;
+  border-radius: 6px;
+  display: block;
+  transition: 0.3s;
+}
+
+#lista-episodios a:hover {
+  background: #ff0048;
+  color: #fff;
+  transform: scale(1.02);
+}
+
 
 /* Grade de personagens */
 .characters-grid {
@@ -287,8 +327,10 @@
 
 .related-anime-card {
     background-color: rgba(0, 0, 0, 0.5);
+    text-align: center;
     border-radius: 10px;
     overflow: hidden;
+    height: 310px;
     transition: transform 0.3s ease;
 }
 
@@ -300,6 +342,7 @@
     width: 100%;
     height: 200px;
     object-fit: cover;
+    
 }
 
 .related-anime-info {
