--- a/estilo/style.css
+++ b/estilo/style.css
@@ -9,7 +9,7 @@ body, html {
     height: 100vh;
     overflow-x: hidden;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background: url(../fotos/pjkpojk_7zfb.png);
+    background: url(../imagens/#);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -304,7 +304,7 @@ body, html {
 /* Footer */
 #rodape {
     grid-area: 4 / 1 / 5 / -1;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.726);
     color: #ff8c00;
     text-align: center;
     padding: 20px 15px;
